updated for weather

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<title>Where to Live Quiz</title>
 		<link rel="stylesheet" href="css/style.css"/>
-
+		<link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
 		<div id="quiz">
@@ -23,16 +23,16 @@
 			
 			<div class ="cold-or-warm"></div>
 			<div class ="reset"><button>Take it again</button></div>
-			<div id="map"></div>
-
 			
-
-				
-				
-
-
-
+			
 		</div>
+		
+			<div id="map"></div>
+			<div class="coldend"></div>
+			<div class="warmend"></div>
+
+		
+
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPjdBo-Fwkh0hrkdMjgGR_LMnWlXWxaBg"
          async defer></script>
