--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
+		<div class="forcenter">
 		<div id="quiz">
 			<h1>Answer a few simple questions to see where you should live</h1>	
 			<h2 class="question">It is the end of February and you decide to take a week long vacation.  Where do you go?
@@ -17,7 +18,7 @@
 				<input type="radio" name="answer" value ='1'></input>
 				<span id= "choice1">I’m so sick of winter… I’m going to Mexico for some beach and relaxing</span><br>
 				
-				<span id= "3"><input type="submit" value="That's my final answer" /> </span><br>
+				<span id= "3"><input class="pad" type="submit" value="That's my final answer" /> </span><br>
 				
 			</form>
 			
@@ -26,6 +27,8 @@
 			
 			
 		</div>
+		</div>
+		<div class="meter thermometer3"></div>
 		
 			<div id="map"></div>
 			<div class="coldend"></div>
