--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Where to Live Quiz</title>
+		<link rel="stylesheet" href="css/normalize.css"/>
 		<link rel="stylesheet" href="css/style.css"/>
 		<link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
+		<div class="meter"></div>
 		<div class="forcenter">
 		<div id="quiz">
 			<h1>Answer a few simple questions to see where you should live</h1>	
@@ -28,7 +30,7 @@
 			
 		</div>
 		</div>
-		<div class="meter thermometer3"></div>
+		
 		
 			<div id="map"></div>
 			<div class="coldend"></div>
@@ -36,7 +38,7 @@
 
 		
 
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPjdBo-Fwkh0hrkdMjgGR_LMnWlXWxaBg"
          async defer></script>
 		<script type="text/javascript" src="js/script.js"></script>
