cleaning up code

--- a/index.html
+++ b/index.html
@@ -5,23 +5,20 @@
 		<title>Where to Live Quiz</title>
 		<link rel="stylesheet" href="css/normalize.css"/>
 		<link rel="stylesheet" href="css/style.css"/>
-		<link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
+		<link href='//fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
 		<div class="meter"></div>
 		<div class="forcenter">
 		<div id="quiz">
 			<h1>Answer a few simple questions to see where you should live</h1>	
-			<h2 class="question">It is the end of February and you decide to take a week long vacation.  Where do you go?
-			</h2>
+			<h2 class="question">It is the end of February and you decide to take a week long vacation.  Where do you go?</h2>
 			<form class="answers">
-				<input type="radio" name="answer" value ='0'></input>
+				<input type="radio" name="answer" value ='0'>
 				<span id="choice0">Hit the slopes, head to the nearest ski resort</span><br>
-				<input type="radio" name="answer" value ='1'></input>
+				<input type="radio" name="answer" value ='1'>
 				<span id= "choice1">I’m so sick of winter… I’m going to Mexico for some beach and relaxing</span><br>
-				
 				<span id= "3"><input class="pad" type="submit" value="That's my final answer" /> </span><br>
-				
 			</form>
 			
 			<div class ="cold-or-warm"></div>
@@ -38,8 +35,8 @@
 
 		
 
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPjdBo-Fwkh0hrkdMjgGR_LMnWlXWxaBg"
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+		<script src="//maps.googleapis.com/maps/api/js?key=AIzaSyCPjdBo-Fwkh0hrkdMjgGR_LMnWlXWxaBg"
          async defer></script>
 		<script type="text/javascript" src="js/script.js"></script>
 	</body>
