--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>Where to Live Quiz</title>
 		<link rel="stylesheet" href="css/normalize.css"/>
 		<link rel="stylesheet" href="css/style.css"/>
-		<link href='//fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
+		<link href="//fonts.googleapis.com/css?family=Lora" rel="stylesheet" type="text/css">
 	</head>
 	<body>
 		<div class="meter"></div>
@@ -14,9 +14,9 @@
 			<h1>Answer a few simple questions to see where you should live</h1>	
 			<h2 class="question">It is the end of February and you decide to take a week long vacation.  Where do you go?</h2>
 			<form class="answers">
-				<input type="radio" name="answer" value ='0'>
+				<input type="radio" name="answer" value ="0">
 				<span id="choice0">Hit the slopes, head to the nearest ski resort</span><br>
-				<input type="radio" name="answer" value ='1'>
+				<input type="radio" name="answer" value ="1">
 				<span id= "choice1">I’m so sick of winter… I’m going to Mexico for some beach and relaxing</span><br>
 				<span id= "3"><input class="pad" type="submit" value="That's my final answer" /> </span><br>
 			</form>
@@ -36,8 +36,7 @@
 		
 
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-		<script src="//maps.googleapis.com/maps/api/js?key=AIzaSyCPjdBo-Fwkh0hrkdMjgGR_LMnWlXWxaBg"
-         async defer></script>
+		<script src="//maps.googleapis.com/maps/api/js?key=AIzaSyCPjdBo-Fwkh0hrkdMjgGR_LMnWlXWxaBg" async defer></script>
 		<script type="text/javascript" src="js/script.js"></script>
 	</body>
 </html>
